# scldm_cd4

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  config.yaml  flake.nix  init.sh  pyproject.toml  skills-lock.json
.github/workflows/: test.yaml
docs/: PROGRESS.md
experiments/config/: inference_fm.yaml  marson_fm.yaml  marson_vae.yaml
experiments/config/datamodule/: census.yaml  default.yaml  single_anndata.yaml
experiments/config/model/: ldm_base.yaml  ldm_small.yaml  vae_base.yaml  vae_tiny.yaml
experiments/config/paths/: user_paths.yaml
experiments/config/runai/: default.yaml  multi_node.yaml  single_node.yaml  tiny.yaml
experiments/config/training/: default.yaml
experiments/scripts/: inference.py  inference_ddp.py  train.py
notebooks/: quickstart_tutorial.ipynb  quickstart_tutorial.py
papers/: README.md
quickstart_data/size_factors_hvg/: log_size_factor_mu.pkl  log_size_factor_sd.pkl
scripts/: compute_log_size_factors.py
src/: datamodule.py  notebook_inference.py  parse10M_split.py
src/scg_vae/: _sthree_provider.py  _train_utils.py  _utils.py  constants.py  datamodule.py  diffusion.py  distributions.py  encoder.py  evaluations.py  flops.py  layers.py  logger.py  mmd.py  models.py  nnets.py  optimizers.py  priors.py  stochastic_layers.py  vae.py  viz_callbacks.py
src/scg_vae/transport/: __init__.py  integrators.py  path.py  transport.py  utils.py
tests/: conftest.py  test_diffusion.py  test_encoder.py  test_layers.py  test_masks.py  test_misc.py
