[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling>=1.24" ]

[project]
name = "scg_vae"
version = "0.0.0"
description = "Based on scLDM, improving and scaling for immune cell response prediction"
readme = "README.md"
authors = [
  { name = "Payam Dibaeinia", email = "payam.dibaeinia@czbiohub.org" },
  { name = "Sudarshan Babu", email = "sudarshan.babu@czbiohub.org" },
  { name = "Giovanni Palla (Original Author of scLDM)", email = "gpalla@chanzuckerberg.com" },
]
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anndata",
  "boto3",
  "cellarium-ml @ git+https://github.com/giovp/cellarium-ml@main",
  "cellxgene-census==1.16.2",
  "deepspeed",
  "ema-pytorch==0.7.7",
  "hydra-core",
  "jax==0.6.2",
  "lightning==2.4",
  "pot[backend-torch]",
  "psutil",
  "pybiomart",
  "pynvml",
  "rich",
  "scikit-misc",
  "scvi-tools==1.2.1",
  "torch==2.7",
  "torch-optimizer",
  "torchdyn",
  "torchmetrics==1.6",
  "wandb",
]

optional-dependencies.dev = [ "coverage", "pytest", "pytest-cov" ]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.envs.hatch-test]
# features = [ "test" ]

# [tool.ruff]
# line-length = 120
# src = [ "src" ]
# extend-include = [ "*.ipynb" ]

# format.docstring-code-format = true

# lint.select = [
#   "B",      # flake8-bugbear
#   "BLE",    # flake8-blind-except
#   "C4",     # flake8-comprehensions
#   "D",      # pydocstyle
#   "E",      # Error detected by Pycodestyle
#   "F",      # Errors detected by Pyflakes
#   "I",      # isort
#   "RUF100", # Report unused noqa directives
#   "TID",    # flake8-tidy-imports
#   "UP",     # pyupgrade
#   "W",      # Warning detected by Pycodestyle
# ]

# lint.ignore = [
#   "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
#   # docs stuff
#   "D100", # Missing docstring in public module
#   "D101", # Missing docstring in public class
#   "D102", # Missing docstring in public function
#   "D103", # Missing docstring in public method
#   "D104", # Missing docstring in public package
#   "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
#   "D107", # Missing docstring in __init__
#   # Disable one in each pair of mutually incompatible rules
#   "D203", # We don't want a blank line before a class docstring
#   "D213", # <> We want docstrings to start immediately after the opening triple quote
#   "D400", # first line should end with a period [Bug: doesn't work with single-line docstrings]
#   "D401", # First line should be in imperative mood; try rephrasing
#   "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
#   "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
#   "E741", # allow I, O, l as variable names -> I is the identity matrix
# ]
# lint.per-file-ignores."*/__init__.py" = [ "F401" ]
# lint.per-file-ignores."notebooks/*" = [ "B", "C4", "D", "E" ]
# lint.per-file-ignores."tests/*" = [ "D", "F" ]
# lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
  "-m not rapids",           # default is not running with rapids
]
markers = [ "rapids: tests to be run only with rapids" ]

[tool.coverage.run]
source = [ "scg_vae" ]
omit = [
  "**/test_*.py",
]
