[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling>=1.24" ]

[project]
name = "scg_vae"
version = "0.0.0"
description = "Based on scLDM, improving and scaling for immune cell response prediction"
readme = "README.md"
authors = [
  { name = "Payam Dibaeinia", email = "payam.dibaeinia@czbiohub.org" },
  { name = "Sudarshan Babu", email = "sudarshan.babu@czbiohub.org" },
  { name = "Giovanni Palla (Original Author of scLDM)", email = "gpalla@chanzuckerberg.com" },
]
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anndata",
  "boto3",
  "cellarium-ml @ git+https://github.com/giovp/cellarium-ml@main",
  "cellxgene-census==1.16.2",
  "deepspeed",
  "ema-pytorch==0.7.7",
  "hydra-core",
  "jax==0.6.2",
  "lightning==2.4.*",
  "pot[backend-torch]",
  "psutil",
  "pybiomart",
  "pynvml",
  "rich",
  "scikit-misc",
  "scvi-tools==1.2.1",
  "torch==2.7.*",
  "torch-optimizer",
  "torchdyn",
  "torchmetrics==1.6.*",
  "wandb",
]

optional-dependencies.dev = [ "coverage", "pytest", "pytest-cov" ]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.envs.hatch-test]
# features = [ "test" ]

# [tool.ruff]
# line-length = 120
# src = [ "src" ]
# extend-include = [ "*.ipynb" ]

# format.docstring-code-format = true

# lint.select = [
#   "B",      # flake8-bugbear
#   "BLE",    # flake8-blind-except
#   "C4",     # flake8-comprehensions
#   "D",      # pydocstyle
#   "E",      # Error detected by Pycodestyle
#   "F",      # Errors detected by Pyflakes
#   "I",      # isort
#   "RUF100", # Report unused noqa directives
#   "TID",    # flake8-tidy-imports
#   "UP",     # pyupgrade
#   "W",      # Warning detected by Pycodestyle
# ]

# lint.ignore = [
#   "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
#   # docs stuff
#   "D100", # Missing docstring in public module
#   "D101", # Missing docstring in public class
#   "D102", # Missing docstring in public function
#   "D103", # Missing docstring in public method
#   "D104", # Missing docstring in public package
#   "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
#   "D107", # Missing docstring in __init__
#   # Disable one in each pair of mutually incompatible rules
#   "D203", # We don't want a blank line before a class docstring
#   "D213", # <> We want docstrings to start immediately after the opening triple quote
#   "D400", # first line should end with a period [Bug: doesn't work with single-line docstrings]
#   "D401", # First line should be in imperative mood; try rephrasing
#   "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
#   "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
#   "E741", # allow I, O, l as variable names -> I is the identity matrix
# ]
# lint.per-file-ignores."*/__init__.py" = [ "F401" ]
# lint.per-file-ignores."notebooks/*" = [ "B", "C4", "D", "E" ]
# lint.per-file-ignores."tests/*" = [ "D", "F" ]
# lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
  "-m not rapids",           # default is not running with rapids
]
markers = [ "rapids: tests to be run only with rapids" ]

[tool.coverage.run]
source = [ "scg_vae" ]
omit = [
  "**/test_*.py",
]

# --------------------------------------------------------------------------
# Pixi configuration (NixOS-friendly: pixi is the only package manager here)
# --------------------------------------------------------------------------

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64" ]

# Tell pixi we expect a CUDA-capable host; the NVIDIA driver is provided by the
# Nix flake's LD_LIBRARY_PATH. `cuda-version` below pins the runtime libraries.
[tool.pixi.system-requirements]
cuda = "12.6"

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = "2.7.*"             # conda-forge name for PyPI `torch`; pixi aliases them
cuda-version = "12.6.*"       # conda-forge pulls matching cudnn/nccl as transitive deps
cuda-cudart-dev = "12.6.*"    # cuda.h + cuda_runtime.h for triton's JIT path (deepspeed)
lightning = "2.4.*"           # conda-forge name for PyPI `pytorch-lightning`
torchmetrics = "1.6.*"
hydra-core = "*"
anndata = ">=0.12.10,<0.13"
wandb = "*"
rich = "*"
boto3 = "*"
psutil = "*"
pynvml = "*"
scikit-misc = "*"
pot = "*"
jax = "==0.6.2"
scvi-tools = "==1.2.1"
cellxgene-census = "==1.16.2"
# Pin: numpyro 0.20.x imports `jit_p` from jax.extend.core.primitives, which
# jax 0.6 renamed to `pjit_p`. Older numpyro works; scvi-tools 1.2.1 only
# requires numpyro>=0.12.1 so this is safe.
numpyro = "<0.20"
matplotlib = ">=3.10.8,<4"
pandas = ">=2.3.3,<3"
scanpy = ">=1.11.5,<2"

[tool.pixi.pypi-dependencies]
# Editable install of this repo. pixi resolves [project].dependencies across
# conda+pypi and de-dupes against the conda entries above, so torch won't be
# reinstalled from PyPI.
scg_vae = { path = ".", editable = true }

# Git source (cellarium-ml isn't published to conda-forge or PyPI).
cellarium-ml = { git = "https://github.com/giovp/cellarium-ml.git", rev = "main" }

# PyPI-only wheels (not on conda-forge or out-of-date there).
deepspeed = "*"
"ema-pytorch" = "==0.7.7"
torchdyn = "*"
"torch-optimizer" = "*"
pybiomart = "*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
ipykernel = "*"
jupyterlab = "*"
marimo = "*"                # reactive notebook UI; `pixi run marimo edit <file.py>`
pre-commit = "*"
poppler = "*"               # pdftotext / pdftoppm for reading PDFs in papers/

[tool.pixi.environments]
default = { features = [ "dev" ], solve-group = "default" }

[tool.pixi.tasks]
# Testing
test = "pytest"
test-fast = "pytest tests/test_encoder.py tests/test_misc.py"

# Data prep (required once per new h5ad)
size-factors = "python scripts/compute_log_size_factors.py --config_path experiments/config/datamodule/single_anndata.yaml --dataset_name marson_hvg --fallback_conditions experimental_perturbation_time_point donor_id"

# Notebook
jupyter = "jupyter lab notebooks/"

# marimo reactive notebook (pair-programming-compatible via marimo-pair skill).
# Port defaults to 48728 to avoid contention with the conventional 2718.
# Launch from repo root; the notebook self-locates via Path(__file__).
[tool.pixi.tasks.marimo-edit]
cmd = "marimo edit notebooks/quickstart_tutorial.py --no-token --headless --port {{ port }}"
args = [{ "arg" = "port", "default" = "48728" }]
env = { PYTHONPATH = "src" }

# Training / inference (mirror the torchrun invocations from README).
# `gpus` is a positional arg, default 4 (this box).
# Usage: `pixi run vae` → 4 GPUs; `pixi run vae 8` → 8 GPUs.
# Hydra overrides pass through: `pixi run vae 4 training.num_epochs=10`.
[tool.pixi.tasks.vae]
cmd = "torchrun --nnodes 1 --nproc-per-node {{ gpus }} experiments/scripts/train.py --config-name=marson_vae"
args = [{ "arg" = "gpus", "default" = "4" }]

[tool.pixi.tasks.fm]
cmd = "torchrun --nnodes 1 --nproc-per-node {{ gpus }} experiments/scripts/train.py --config-name=marson_fm"
args = [{ "arg" = "gpus", "default" = "4" }]

[tool.pixi.tasks.infer]
cmd = "torchrun --nnodes 1 --nproc-per-node {{ gpus }} experiments/scripts/inference_ddp.py --config-name=inference_fm"
args = [{ "arg" = "gpus", "default" = "4" }]
